Changes in version 1.0-7
    * improved plot for tNN
    * tNN: centroids stop moving to prevent 2 clusters from colliding
    * fixed bug with getting transitions from a tracds object with 0 transitions
    * find_clusters also accepts now a threshold factor for match_clusters

Changes in version 1.0-6
    * Improved performance for prune()
    * Added object.size() which also reports memory used by the model 
    * Switched to igraph0

Changes in version 1.0-5
    * Added several methods for score.
    * Threshold for pruning and finding rare clusters/transitions 
	is now less or equal instead of just less

Changes in version 1.0-3
    * Finished the transition to reference objects implemented 
	using environments.
    * transition_table() now has for consitency also the default of 
	add_one set to FALSE.
    * last_clustering() was added as an accessor function to tNN.
    * 'igraph' is now the default plot method.
    * Added combining EMMs.
    * Added reclustering using tNN.
    * Added coloring of states and transitions to plot().
    * Added coercion functions as.igraph() and as.graph from TRACDS.

Changes in version 1.0-2 
    * service release